--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: task, local: true) do |f| %>
+<%= form_with(model: @task, local: true) do |f| %>
   <% if message.errors.any? %>
     <div id="error_explanation">
       <ul>
